backend/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capstone-auth
  template:
    metadata:
      labels:
        app: capstone-auth
    spec:
      containers:
        - name: capstone-auth
          image: capstone/capstone-auth
          imagePullPolicy: Never
