backend/infra/k8s/user-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-mongo
  template:
    metadata:
      labels:
        app: user-mongo
    spec:
      containers:
        - name: user-mongo
          image: mongo
