backend/infra/k8s/auth-mongo-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-auth-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: capstone-auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
