backend/infra/k8s/auth-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-auth-srv
spec:
  type: ClusterIP
  selector:
    app: capstone-auth
  ports:
    - name: capstone-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
