backend/infra/k8s/carpark-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: carpark-srv
spec:
  selector:
    app: carpark
  type: ClusterIP
  ports:
    - name: carpark
      protocol: TCP
      port: 4001
      targetPort: 4001
