backend/infra/k8s/rezervation-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: rezerv-srv
spec:
  selector:
    app: rezerv
  type: ClusterIP
  ports:
    - name: rezerv
      protocol: TCP
      port: 4002
      targetPort: 4002
