backend/infra/k8s/user-mongo-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: user-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
