backend/infra/k8s/user-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - name: user
      protocol: TCP
      port: 3002
      targetPort: 3002
